--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@ var polCourses = ['POL 1001 -- Amer Govt & Politics', 'POL 1019 -- Indigenous Pe
 var ddsCourses = ['DDS 6112 -- Perio II A - Perio Technique', 'DDS 6125 -- Periodontology Clinic D3 Fall', 'DDS 6128 -- Periodontology Clinic D4 Fall', 'DDS 6141 -- Pediatric Dent Clinic', 'DDS 6151 -- Pain/Anxiety Contr', 'DDS 6152 -- Oral & Maxillofacial Surgery I', 'DDS 6171 -- Orthodontics I', 'DDS 6181 -- Ortho Clin Rotn', 'DDS 6213 -- Dent MicB', 'DDS 6214 -- General Histology', 'DDS 6231 -- Phys Evaluation I', 'DDS 6234 -- Radiographic Interp', 'DDS 6235 -- ORAD PreClin Lab I', 'DDS 6246 -- Oral Radiology Clinic D3 Fall', 'DDS 6253 -- General Pathology', 'DDS 6254 -- Systemic Pathology', 'DDS 6271 -- TMD & Orofacial Pain', 'DDS 6310 -- Intro to Dental Clinics', 'DDS 6317 -- Comp Care Clinic D3 Fall', 'DDS 6320 -- Comp Care Clinic D4 Fall', 'DDS 6325 -- Dental Professional Dev I', 'DDS 6327 -- Dental Professional Dev III', 'DDS 6328 -- Dent Professional Dev IV', 'DDS 6331 -- Dental Public Health I', 'DDS 6340 -- Med Emergencies & Pat Safety', 'DDS 6362 -- Outreach Experiences D4 Spring', 'DDS 6411 -- Biomaterials Science I', 'DDS 6431 -- Oral Anat I', 'DDS 6432 -- Oral Anat Lab I', 'DDS 6434 -- Oper Dent I', 'DDS 6436 -- Oper Dent II', 'DDS 6437 -- Oper Dent II Lab', 'DDS 6438 -- Oper Dent III', 'DDS 6439 -- Evidence Based Restorative', 'DDS 6444 -- Oper Dent Clinic D3 Fall', 'DDS 6447 -- Oper Dent Clinic D4 Fall', 'DDS 6456 -- Endo Dent Clinic D3 Fall', 'DDS 6459 -- Endo Dent Clinic D4 Fall', 'DDS 6473 -- PC Pros Tec Lec III', 'DDS 6474 -- PC Pros Tec Lab III', 'DDS 6475 -- Pros Techniques Lec IV', 'DDS 6476 -- Pros Tech Lab I V', 'DDS 6479 -- Clinical Occlusion', 'DDS 6481 -- Fix Pros Cl II', 'DDS 6482 -- Rem Pros Cl II', 'DDS 6496 -- Predoctoral Pros Honors Course', 'DDS 6499 -- Fixed Pros Clinic D3 Fall', 'DDS 6501 -- Rem Pros Clinic D3 Fall', 'DDS 6505 -- Rem Pros Clinic D4 Summer', 'DDS 6506 -- Fixed Pros Clinic D4 Fall', 'DDS 6507 -- Rem Pros Clinic D4 Fall', 'DDS 6588 -- DentClinical Exp in Guatemala', 'DDS 6601 -- Phillips Neighborhood Vol', 'DDS 6606 -- Rural Dentistry Scholars Elect', 'DDS 6611 -- Study Abroad Externship', 'DDS 6613 -- Endo Topics for Gen Dentist', 'DDS 6615 -- OMF Path Ind Study', 'DDS 6621 -- Intro to CAD/CAM Restorations', 'DDS 6623 -- Oral Disease Clinic Elective', 'DDS 6627 -- Oral Path Clinical Correlation', 'DDS 6631 -- DDS/PhD Research Elective I', 'DDS 6900 -- Dent Clin', 'DDS 6918 -- Evidence-based Dentistry', 'DDS 7103 -- Biochem & Cell Bio', 'DDS 7113 -- D2 Perio Clinic I', 'DDS 7328 -- Dental Profssnl Dvlpmnt IVb'];
 var histCourses = ['HIST 1011W -- Civilization & the Environment', 'HIST 1031W -- Europe and the World, I', 'HIST 1301W -- American Hist to 1865', 'HIST 1534 -- Intro Jewish History & Culture', 'HIST 1811 -- The Sixties: History & Memory', 'HIST 1911 -- A History of the Drug Wars', 'HIST 1917 -- Racism, Anti-Racism & America', 'HIST 3000 -- New Topics in History', 'HIST 3001 -- Public History', 'HIST 3020 -- Hands-On History', 'HIST 3051 -- Ancient Civ: Near East & Egypt', 'HIST 3244 -- Eastern Europe', 'HIST 3264 -- Imperial Russia', 'HIST 3271 -- The Viking World', 'HIST 3284W -- History through Memoir', 'HIST 3401W -- Early Latin America to 1825', 'HIST 3412 -- Soccer: Around the World', 'HIST 3416 -- Imperialism and its Critics', 'HIST 3417W -- Food in History', 'HIST 3418 -- Drink in History', 'HIST 3426 -- Piracy in the Mediterranean', 'HIST 3429 -- Lat Am History in Film & Text', 'HIST 3432 -- Modern Africa', 'HIST 3436 -- Contemporary African Conflict', 'HIST 3461 -- Intro to E. Asia I', 'HIST 3485 -- Hist of SE Asia', 'HIST 3492 -- Hinduism', 'HIST 3493 -- Islam: Religion and Culture', 'HIST 3505 -- Modern Middle East', 'HIST 3509 -- Studying the Middle East', 'HIST 3534 -- Intro Jewish History & Culture', 'HIST 3606 -- Christians, Muslims, and Jews', 'HIST 3637 -- Modern Russia', 'HIST 3691W -- The British Empire', 'HIST 3708 -- The Age of Curiosity', 'HIST 3721 -- Studies in 20th C Eur 1900-45', 'HIST 3727 -- History of the Holocaust', 'HIST 3728 -- Human Rights & Crimes/Humanity', 'HIST 3731 -- Mod France 1780-Present', 'HIST 3811 -- Antebellum America', 'HIST 3822 -- Making America Modern', 'HIST 3834 -- Law in American Life', 'HIST 3853 -- Black Protest in 20-C America', 'HIST 3862 -- American Immigration Hist', 'HIST 3886 -- Atlantic Revolutions', 'HIST 3993 -- Directed Study', 'HIST 3994 -- Directed Research', 'HIST 4961V -- Honors:  Major  Paper', 'HIST 4961W -- Major Paper', 'HIST 4970 -- History Day Mentorship', 'HIST 5264 -- Imperial Russia', 'HIST 5461 -- Intro to E. Asia I', 'HIST 5708 -- The Age of Curiosity', 'HIST 5801 -- Sem: Early American Hist', 'HIST 5891 -- American Indian Workshop', 'HIST 5993 -- Directed study', 'HIST 5994 -- Directed Research', 'HIST 8032 -- Archives', "HIST 8333 -- FTE: Master's", 'HIST 8444 -- FTE: Doctoral', 'HIST 8666 -- Doct Pre-Thesis Cr*', 'HIST 8777 -- Thesis Credit:Mast*', 'HIST 8888 -- Thesis Credit:Doct*', 'HIST 8910 -- Topics in US Hist', 'HIST 8960 -- Topics in History', 'HIST 8993 -- Directed Study', 'HIST 8994 -- Directed Research'];
 
-for(var i = 0; i < histCourses.length; i++) {
-  let course = histCourses[i];
-  let name = histCourses[i].split(" -- ")[0];
-  let description = histCourses[i].split(" -- ")[1];
+for(var i = 0; i < chemCourses.length; i++) {
+  let course = chemCourses[i];
+  let name = chemCourses[i].split(" -- ")[0];
+  let description = chemCourses[i].split(" -- ")[1];
   let number = removeLetters(name);
   var index = (Math.floor(number/1000)) - 1;
-  let c = new Class("HIST",description,number,["CSCI 1913"]);
+  let c = new Class("CHEM",description,number,["CSCI 1913"]);
   (allClasses[index]).push(c);
 }
 
@@ -112,8 +112,8 @@ function populateGrid() {
       if(j >= start && j < end) {
         var g = new Grid((150+rWidth/2) + ((rWidth/2 * (i*2)) + (200*i)), s + heightOffset, col[k]);
         k++;
+        newGrid.push(g);
       }
-      newGrid.push(g);
     }
     k = 0;
     grid.push(newGrid);
@@ -125,7 +125,9 @@ function drawGrid() {
   var colors = ["#FF6600","#FFA500","#FFFF00","#00FF00","#00CFF6","#4BAF82","#EE82EE","#23FEF6"]
 
   for(var i = 0; i < grid.length; i++) {
+    console.log(grid);
     for(var j = 0; j < grid[i].length; j++) {
+      console.log(grid[i][j]);
       drawRect(rWidth+9, rHeight+9, "#000000", grid[i][j].xPos,grid[i][j].yPos);
       drawRect(rWidth, rHeight, "#FFFFFF", grid[i][j].xPos,grid[i][j].yPos);
       drawText(grid[i][j].course.name,"25px Arial",grid[i][j].xPos,grid[i][j].yPos-30,"000000", 30);
